# mts_service/src/main/java/ru/aigul/mts_service/api/dto/UserCreateRequest.java
@@ -1,0 +1,28 @@
+package ru.aigul.mts_service.api.dto;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Getter;
+import lombok.Setter;
+
+@Setter
+@Getter
+public class UserCreateRequest {
+
+    @Email
+    @NotBlank
+    private String email;
+
+    @NotBlank
+    @Size(min = 1, max = 100)
+    private String name;
+
+    @NotBlank
+    @Size(min = 6, max = 255)
+    private String password;
+
+    public UserCreateRequest() {}
+
+}
+
